# Bcord

./: .dockerignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  docker-compose.yml  tester.html
app/migrations/: 001_messages_channel_id.sql  010_guilds_channels_compat.sql  010_guilds_channels_events.sql  011_channels_guilds_compat.sql  011_seed_sfc.sql
common/: CMakeLists.txt
common/include/: lan_mac.hpp
common/src/: dummy.cpp
server/: CMakeLists.txt
server/src/: Caddyfile  index.html  main.cpp
server/src/Caddy/: Caddyfile
site/: tester.html
tester/: index.html
tools/: create_user.sql
